--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "ngx-bootstrap": "^11.0.2",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
+    "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
@@ -33,6 +35,8 @@
     "@angular/cli": "~15.2.3",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.6.3",
+    "@types/uuid": "^9.0.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
