--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
@@ -36,6 +38,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.6.3",
+    "@types/pdfmake": "^0.2.3",
     "@types/uuid": "^9.0.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
